# test-rspc

./: bindings.ts  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  Inner.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
